WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306400
Fix linear gradient rendering when all color stops are at same position
https://bugs.webkit.org/show_bug.cgi?id=306400
Summary
Fix linear gradient rendering when all color stops are at same position
Ahmad Saleem
Reported
2026-01-27 20:52:01 PST
ssia - we are failing WPT - despite in the name as `radial`, it is for `linear-gradient`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-27 20:52:10 PST
<
rdar://problem/169063497
>
Ahmad Saleem
Comment 2
2026-01-27 20:54:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57387
EWS
Comment 3
2026-02-04 17:04:58 PST
Committed
306823@main
(ab99903326f1): <
https://commits.webkit.org/306823@main
> Reviewed commits have been landed. Closing PR #57387 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug