Fix linear gradient rendering when all color stops are at same position https://bugs.webkit.org/show_bug.cgi?id=306400 rdar://169063497

Reviewed by NOBODY (OOPS!).

When all color stops in a linear gradient are at the same position,
the gradient should render as a solid color using the last stop's color.

Previously, LinearGradientAdapter::normalizeStopsAndEndpointsOutsideRange
would clamp all stops to offset 1, which caused the rendering to show
the first color instead of the last color.

The fix clears all stops and replaces them with two stops (at 0 and 1)
both using the last stop's color, ensuring correct solid color rendering.

NOTE - the test name includes `radial` but in actual, it is for
`linear-gradient`.

* Source/WebCore/style/values/images/StyleGradient.cpp:
(WebCore::Style::LinearGradientAdapter::normalizeStopsAndEndpointsOutsideRange):
* LayoutTests/TestExpectations: Progression